ECCE 2019 makalesine simulasyon sonuçları eklendi. 5 sayfaya sığdırmadan önceki son commit :) @furkankarakaya, @ozank

--- a/Paper/ECCE 2019/introduction.tex
+++ b/Paper/ECCE 2019/introduction.tex
@@ -1,5 +1,5 @@
 \section{Introduction}\label{sec:Intro}
-Integrated modular motor drives (IMMD) gained special interest in recent years to replace the conventional motor drives thanks to their high power density and fault tolerance capability. By the modularization of motor drive, redundancy of the motor drive system can be increased which is especially desired in safety ctirical applications \cite{Zhang2017}. Moreover, power semiconductor devices having lower ratings can be utilized such as Gallium Nitride (GaN) Field Effects Transistors (FETs) resulting in higher efficiency and higher power density \cite{Wang2015b}.
+Integrated modular motor drives (IMMD) gained special interest in recent years to replace the conventional motor drives thanks to their high power density and fault tolerance capability. By the modularization of motor drive, redundancy of the motor drive system can be increased which is especially desired in safety critical applications \cite{Zhang2017}. Moreover, power semiconductor devices having lower ratings can be utilized such as Gallium Nitride (GaN) Field Effects Transistors (FETs) resulting in higher efficiency and higher power density \cite{Wang2015b}.
 
 There are several IMMD studies which use different types of modularity in terms of DC link connection, such as series connected \cite{Wang2015b} and parallel connected \cite{Zhang2017} topologies. In series connected drives, the main motivation is to be able to utilize low voltage GaN devices in a higher DC link voltage. Moreover, it is aimed to reduce the DC link current ripple by using gate signal interleaving between modules \cite{Wang2013}. Parallel connection is usually used to distribute the heat dissipation and reduce the size of DC link capacitors via interleaving \cite{Ugur2017}.
 
