--- a/Paper/ECCE 2019/section1.tex
+++ b/Paper/ECCE 2019/section1.tex
@@ -41,7 +41,7 @@ The picture of the GaN based 3-phase inverter module of the IMMD system is shown
 \end{minipage}
 \end{figure}
 
-\subsection{Parasitic inductances}
+\subsection{Parasitic Inductances}
 
 In physical realization of power electronics circuit, the parasitic inductances of the layout is an important consideration especially for the paths carrying switched current.
 For the inverter circuit given in Fig. \ref{fig:invertermodule}, the power loop and commutation loop inductances are identified using Ansys Q3D tool and given in Fig. \ref{fig:SingleModuleInductanceMap}. The power loop is a closed path including half-bridge switches, a DC link capacitor and parasitic inductances which connects them each other . Another closed path is the commutation loop which includes two DC link capacitors and the parasitic inductances between the capacitors. The commutation loop is effective between any two phases of the system whenever a current commutes from one phase to another one. In the following sections, these two loops will be discussed in detail.
