--- a/Paper/ECCE 2019/conclusion.tex
+++ b/Paper/ECCE 2019/conclusion.tex
@@ -1,24 +1,5 @@
 \section{Conclusion}
 
-Deductions:
+In this paper, the effects of parasitic inductances on a modular motor drive are investigated. Device stress is only affected by power loop inductances, whereas capacitor stress is caused by the commutation inductances. In series connected converters, interleaving has no useful effect on the capacitor stress and module voltage ripple. On the other hand, capacitor stress can be reduced in parallel connection with interleavig. However, the capacitor RMS currents are not significantly reduced when parasitic inductances are taken into account. 
 
-.....
-
-....
-
-...
-
-..
-
-.
-
-In the final paper, a complete analytical model will be introduced through which parasitic inductance, number of modules and interleaving effects can be analyzed. The variation of each stress will also be analyzed with varying switching frequency so that the relation between the resonance frequency due to capacitance and inductance combination and switching frequency will be more clear. 
-
-The aforementioned IMMD prototype is currently on its integration and testing stage where the dedicated permanent magnet motor and control PCB are also realised. The power distribution architecture is designed such that 4 inverter modules can be connected in all-series, all-parallel or 2-series and 2-parallel fashion.
-
-All the simulation results presented in this manuscript will be validated via experiments and presented in the final paper.
-
-Kapasitör voltajları için deney sonucu vercez (akımı ölçemeyiz onu derive etcez?)
-
-Modüller arası akım geçişleri ölçülebilir aslında (seri
-/paralelde)
+In the final paper, a complete analytical model will be introduced including parasitic inductances, number of modules and interleaving effects. The aforementioned IMMD prototype is currently on its testing stage. The power distribution architecture is designed such that 4 inverter modules will be tested with all-series, all-parallel or 2-series and 2-parallel connections. All the simulation results presented in this manuscript will be validated via experiments and presented in the final paper.
