ECCE 2019 makalesi @furkankarakaya ile birlikte tamamlandı. Bu pdf yüklenecek.

--- a/Paper/ECCE 2019/bibliography.bib
+++ b/Paper/ECCE 2019/bibliography.bib
@@ -5867,7 +5867,7 @@ volume = {46},
 year = {2010}
 }
 @inproceedings{Su2010,
-author = {Su, Gui-jia and Tang, Lixin},
+author = {G. Su and L. Tang},
 booktitle = {2012 IEEE Energy Conversion Congress and Exposition (ECCE)},
 doi = {10.1109/ECCE.2012.6342375},
 file = {::},
@@ -5878,7 +5878,6 @@ month = {sep},
 pages = {2847--2853},
 publisher = {IEEE},
 title = {{A segmented traction drive system with a small dc bus capacitor}},
-url = {http://ieeexplore.ieee.org/document/6342375/},
 year = {2012}
 }
 @article{Bianchi2003,
@@ -6276,7 +6275,6 @@ keywords = {dc link capacitor,gan,integrated modular motor drive,interleaving,ma
 mendeley-groups = {selected topics/keysan},
 pages = {263--270},
 title = {{DC link capacitor optimization for integrated modular motor drives}},
-url = {http://ieeexplore.ieee.org/document/8001258/},
 volume = {i},
 year = {2017}
 }
