--- a/Paper/ECCE 2019/conclusion.tex
+++ b/Paper/ECCE 2019/conclusion.tex
@@ -1,5 +1,4 @@
 \section{Conclusion}
 
-In this paper, the effects of parasitic inductances on a modular motor drive are investigated. Device stress is only affected by power loop inductances, whereas capacitor stress is caused by the commutation inductances. In series connected converters, interleaving has no useful effect on the capacitor stress and module voltage ripple. On the other hand, capacitor stress can be reduced in parallel connection with interleavig. However, the capacitor RMS currents are not significantly reduced when parasitic inductances are taken into account. 
-
-In the final paper, a complete analytical model will be introduced including parasitic inductances, number of modules and interleaving effects. The aforementioned IMMD prototype is currently on its testing stage. The power distribution architecture is designed such that 4 inverter modules will be tested with all-series, all-parallel or 2-series and 2-parallel connections. All the simulation results presented in this manuscript will be validated via experiments and presented in the final paper.
+In this paper, the effects of parasitic inductances on a modular motor drive are investigated. It is shown that device stress is only affected by the power loop inductances, whereas capacitor stress is caused by the commutation inductances. In series connected converters, interleaving has no useful effect on the capacitor stress and module voltage ripple. On the other hand, capacitor stress can be reduced by parallel connection with interleavig. However, the capacitor currents are not significantly reduced when parasitic inductances are taken into account. 
+In the final paper, a complete analytical model will be introduced including parasitic inductances, number of modules and the interleaving effects. Inverter modules of the aforementioned IMMD prototype will be tested with series and parallel connection combinations and the experimental results will be presented.
