--- a/Paper/ECCE 2019/abstract.tex
+++ b/Paper/ECCE 2019/abstract.tex
@@ -1,3 +1,3 @@
 \vspace{-1em}
 \textbf{Abstract}: 
-In this paper, the effect of parasitic inductances on power semiconductor device stress, DC link capacitor current ripple and DC link voltage ripple in a motor drive are investigated. A GaN based motor drive inverter module designed for an Integrated Modular Motor Drive (IMMD) application is considered. The actual capacitor current stress in a single module is shown to be much more adverse when the commutation inductances are taken into account. The change in the interleaving scheme is discussed when the connection inductances between inverter modules that are connected in series or parallel are considered. A comparison between series and parallel connection in a modular motor drive is performed with several aspects.
+In this paper, DC link capacitor current and voltage ripple under the effect of parasitic inductances for a GaN based integrated modular motor drive (IMMD) are investigated. The variation in the interleaving scheme when inverter modules are connected in series or parallel are presented. The IMMD system used for the experiments has 4 inverter modules each having 270 V DC bus voltage and 2 kW output power.
