--- a/Paper/ECCE 2019/introduction.tex
+++ b/Paper/ECCE 2019/introduction.tex
@@ -1,11 +1,7 @@
 \section{Introduction}\label{sec:Intro}
-Integrated modular motor drives (IMMD) gained special interest in recent years to replace the conventional motor drives thanks to their high power density and fault tolerance capability. By the modularization of motor drive, redundancy of the motor drive system can be increased which is especially desired in safety critical applications \cite{Zhang2017}. Moreover, power semiconductor devices having lower ratings can be utilized such as Gallium Nitride (GaN) Field Effects Transistors (FETs) resulting in higher efficiency and higher power density \cite{Wang2015b}.
+Integrated modular motor drives (IMMD) gained special interest in recent years thanks to their high power density and fault tolerance capability. Modular motor drives increase redundancy of the system which is desired in safety critical applications \cite{Zhang2017}. Moreover, power semiconductor devices with low voltage ratings such as Gallium Nitride (GaN) Field Effects Transistors (FETs) can be utilized, resulting in higher efficiency and higher power density \cite{Wang2015b}. There are several IMMD designs which have different types of modularity in terms of DC link connection, such as series connected \cite{Wang2015b} and parallel connected \cite{Zhang2017,Su2010} topologies. In series connected drives, the main motivation is to utilize low voltage GaN devices in a higher DC link voltage. Parallel connection is used to distribute the heat dissipation surface and reduce the size of DC link capacitors by interleaving \cite{Ugur2017}.
 
-There are several IMMD studies which use different types of modularity in terms of DC link connection, such as series connected \cite{Wang2015b} and parallel connected \cite{Zhang2017} topologies. In series connected drives, the main motivation is to be able to utilize low voltage GaN devices in a higher DC link voltage. Parallel connection is usually used to distribute the heat dissipation and reduce the size of DC link capacitors via interleaving \cite{Ugur2017}.
-
-Connection of several voltage source inverters (VSI) in a modular fashion brings its own challenges. Potential circulating currents and unbalanced voltages may also occur under abnormal operating conditions. Moreover, the parasitic components due to the physical connections between the modules may result in unbalanced stress on module capacitors.
-
-Careful layout and connection architecture design is required in order to minimize these effects, however too few studies in the literature give special attention to parasitic component effects in modular drive topologies. In \cite{Brown2007}, two candidate DC bus architectures are proposed and compared in terms of DC bus current oscillations due to layout inductances.
+However, modular usage of voltage source inverters (VSI) brings its own challenges. Circulating currents and unbalanced voltages may occur and the parasitic components due to the physical connections between the modules may result in unbalanced stress on module capacitors. Therefore, careful layout design is required in order to minimize these effects, however too few studies in the literature give special attention to the parasitic components in modular drive topologies. In \cite{Brown2007}, two candidate DC bus architectures are compared in terms of DC bus current oscillations due to layout inductances.
 
 In this paper, the effects of PCB parasitic inductances are investigated in a GaN based IMMD. The overshoots on GaN voltages due to power loop inductance are investigated. The actual DC link capacitor current stress and voltage ripples are analyzed considering commutation inductances between phases. Series and parallel connected inverter modules and the effect of connection inductances to their performance are analyzed.
 
